# easily_attainable_identities

./: readme.md
data_prep/data/: exchange_addresses.csv  known_hackers.csv
data_prep/sql/: eai_no_dusting.sql  uni_directional_transfer_history_table.sql
graph_implementation/: CMakeLists.txt
graph_implementation/include/: uni_graph.hpp
graph_implementation/src/: main.cpp  uni_graph.cpp
graph_implementation/test/: CMakeLists.txt  test_uni_graph.cpp
graph_implementation/test_data/: test_build_graph1_000000000000  test_build_graph2_000000000000  test_build_graph2_000000000001  test_build_graph3_000000000000  test_kyc.csv
